--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -22,14 +22,11 @@
     <PreferenceCategory
         android:title="@string/status_bar_clock_title">
 
-       <ListPreference
-            android:key="status_bar_clock_style"
-            android:dialogTitle="@string/status_bar_clock_title"
-            android:title="@string/status_bar_clock_title"
-            android:summary="@string/status_bar_clock_summary"
-            android:entries="@array/entries_status_bar_clock_style"
-            android:entryValues="@array/values_status_bar_clock_style"
-            android:persistent="false" />
+       <CheckBoxPreference
+            android:key="status_bar_show_clock"
+            android:title="@string/status_bar_show_clock_title"
+            android:summary="@string/status_bar_show_clock_summary"
+            android:defaultValue="true" />
 
         <ListPreference
             android:key="status_bar_am_pm"
