--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -46,6 +46,11 @@
         android:entries="@array/entries_font_size"
         android:entryValues="@array/entryvalues_font_size"
         android:dialogTitle="@string/dialog_title_font_size" />
+    
+    <CheckBoxPreference
+        android:key="pref_s2w_enable"
+        android:dialogTitle="@string/s2w_enable"
+        android:title="@string/s2w_enable_summary"/>
 
     <PreferenceScreen
         android:key="navigation_bar"
