--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -56,5 +56,17 @@
         android:key="navigation_bar"
         android:fragment="com.android.settings.cyanogenmod.NavBar"
         android:title="@string/navigation_bar_title" />
+	
+    <CheckBoxPreference
+            android:key="s2w"
+            android:summary="Tick this if you want Swipe2Wake enabled"
+            android:title="S2W Enabled"
+            android:defaultValue="true" />
+	    
+    <CheckBoxPreference
+            android:key="charging_animation"
+            android:summary="Tick this if you want the charging animation to be shown"
+            android:title="Charging Animation"
+            android:defaultValue="true" />
 
 </PreferenceScreen>
