--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -59,8 +59,8 @@
 	
     <CheckBoxPreference
             android:key="s2w"
-            android:summary="Tick this if you want Swipe2Wake enabled"
-            android:title="S2W Enabled"
+            android:summary="Do you want the awesome to be enabled?"
+            android:title="S2W ;)"
             android:defaultValue="true" />
 	    
     <CheckBoxPreference
@@ -68,5 +68,15 @@
             android:summary="Tick this if you want the charging animation to be shown"
             android:title="Charging Animation"
             android:defaultValue="true" />
+            
+     <EditTextPreference
+        android:key="carrier_label"
+        android:title="Carrier Label"
+        android:summary="Change your fuckin carrier label"
+        android:selectAllOnFocus="true"
+        android:inputType="textCapWords"
+        android:capitalize="words"
+        android:singleLine="true"
+        android:maxLines="1" />
 
 </PreferenceScreen>
