Move sweep2wake toggle to appropriate place
Change-Id: Ie5788d83f1cc98d54bf9b162fd1fca18d1ddd65c

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -76,4 +76,10 @@
             android:summary="@string/pref_volume_wake_summary"
             android:defaultValue="false" />
 
+        <CheckBoxPreference
+            android:key="sweep2wake"
+            android:summary="Enable Sweep2Wake"
+            android:title="Sweep2Wake"
+            android:defaultValue="true" />
+
 </PreferenceScreen>
