--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -66,6 +66,12 @@
             android:title="@string/display_electron_beam_animation_off_title"
             android:defaultValue="true" />
 
+    <CheckBoxPreference
+            android:key="charging_animation"
+            android:summary="Enable Charging Animation"
+            android:title="Charging Animation"
+            android:defaultValue="true" />
+
         <PreferenceCategory
             android:key="category_wakeup_options"
             android:title="@string/display_category_wakeup_options_title"/>
