--- a/res/xml/power_widget_settings.xml
+++ b/res/xml/power_widget_settings.xml
@@ -80,4 +80,19 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+       android:title="@string/custom_carrier_label">
+
+        <EditTextPreference
+            android:key="carrier_label"
+            android:title="@string/custom_carrier_label_summary"
+            android:summary="You want your name in place of the carrier label?"
+            android:selectAllOnFocus="true"
+            android:inputType="textCapWords"
+            android:capitalize="words"
+            android:singleLine="true"
+            android:maxLines="1" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
